--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
   <header>
-    <h1>No Name Clothes</h1>
+    <div class= "header-doble-logo">
+        <img src="Nonameclothes LOGO.png" alt="izquierda" class="logo" />
+        <h1>No Name Clothes</h1>
+        <img src="Nonameclothes LOGO.png" alt="derecha" class="logo" />
+     </div>
+
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
