Se pulen los textos dentro del index para especificar el emprendimiento

--- a/Index.html
+++ b/Index.html
@@ -28,17 +28,23 @@
 
   <section id="home">
     <h2>Bienvenido!</h2>
-    <p>Somos No Name Clothes - Tu marca de ropa de anime alternativa favorita</p>
+    <p>En No Name Clothes hacemos estampados únicos inspirados en animes. Diseñamos buzos, remeras, pantalones, bermudas y tambien realizamos aros impresos en 3D. Todos diseños originales creados por nosotros.
+    </p>
+    <p> Realizamos envios a todo el pais.</p>
   </section>
 
   <section id="nosotros">
     <h2>¿Quienes somos?</h2>
-    <p>Conocé al equipo detras de No Name Clothes</p>
-  </section>
+    <p>Este emprendimiento nacio en 2021 de la mano de Camila Cerutti, Ignacio Guillamondegui y Mauro Amoedo como una idea entre 3 amigos que querian vestir sus propias prendas con sus animes favoritos, tambien pensabamos en que nos encanta la ropa oversize por lo que todos nuestros talles en remeras y buzos tienen estas medidas.</p>
+    <p>Comenzamos realizando nuestros propios diseños, invertimos en nuestras maquinas para estampar y empezamos a vender a conocidos, este proyecto fue cada vez creciendo mas que hoy vendemos nuestras prendas en tiendas de ropa alternativa</p>
+</section>
 
   <section id="clientes">
     <h2>Clientes</h2>
-    <p>¿En que tiendas podes encontrar nuestros productos? Te mostramos algunos de nuestros clientes!</p>
+    <p>¿En que tiendas podes encontrar nuestras prendas?</p>
+    <p>SYMB⛧LIC TATTO & PIERCING - Tucumán 105, Córdoba</p>
+    <p>Alison ropa alternativa - 9 de Julio 333 local 38, Córdoba</p>
+    <p>Rock city - Deán Funes 250 Local 22, Córdoba</p>
   </section>
 
   <section id="contacto">
