--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Estilo.css">
     <script defer src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon-16x16.png" type="image.png">
 </head>
 <body>
   <header>
